fix: hide scrollbars during settings transition

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -95,4 +95,5 @@ body {
   display: flex;
   flex-direction: column;
   position: relative;
+  overflow: hidden;
 }
